--- a/Poissons.bib
+++ b/Poissons.bib
@@ -114,10 +114,6 @@
   primaryclass = {math},
   publisher = {{arXiv}},
   doi = {10.48550/arXiv.0707.4399},
-  abstract = {The author presents a computer implementation, calculating the terms of the Saneblidze-Umble diagonals on the permutahedron and the associahedron. The code is analyzed for correctness and presented in the paper, the source code of which simultaneously represents both the paper and the program.},
-  archiveprefix = {arXiv},
-  keywords = {52B05; 18D50,Mathematics - Algebraic Topology,Mathematics - Combinatorics},
-  file = {/Users/mac/Documents/Bibliothèque/Recherche/Vejdemo-Johansson_2007_Enumerating the Saneblidze-Umble diagonal terms.pdf;/Users/mac/Zotero/storage/M6ARZVMD/0707.html}
 }
 
 @article{LA21,
@@ -153,4 +149,41 @@
   pages = {335--353},
   issn = {0040-9383},
   doi = {10.1016/0040-9383(96)00016-X},
+}
+
+@article{losevNewModuliSpaces2000,
+  title = {New Moduli Spaces of Pointed Curves and Pencils of Flat Connections.},
+  author = {Losev, A. and Manin, Y.},
+  year = {2000},
+  month = jan,
+  journal = {Michigan Mathematical Journal},
+  volume = {48},
+  number = {1},
+  pages = {443--472},
+  publisher = {{University of Michigan, Department of Mathematics}},
+  issn = {0026-2285, 1945-2365},
+  doi = {10.1307/mmj/1030132728},
+  abstract = {The Michigan Mathematical Journal},
+}
+
+@book{bauesGeometryLoopSpaces1980,
+  title = {Geometry of Loop Spaces and the Cobar Construction},
+  author = {Baues, H. J.},
+  year = {1980},
+  series = {Memoirs of the {{American Mathematical Society}}},
+  volume = {25},
+  publisher = {{American Mathematical Society}},
+  issn = {0065-9266, 1947-6221},
+  doi = {10.1090/memo/0230},
+  abstract = {Advancing research. Creating connections.},
+  isbn = {978-0-8218-2230-2 978-1-4704-0634-9},
+  langid = {english}
+}
+
+@article {MazuirLA22,
+  AUTHOR = {Laplante-Anfossi, Guillaume and Mazuir, Thibaut},
+    TITLE = {The diagonal of the multiplihedra and the tensor product of {A}-infinity morphisms},
+    year = {2023},
+  journal = {Journal de l'{\'E}cole polytechnique},
+  pages = {to appear},
 }
