--- a/aux/commands.tex
+++ b/aux/commands.tex
@@ -156,7 +156,7 @@
 \def\abovespace{\vspace{12pt}}
 \def\belowspace{\vspace{8pt}}
 
-
+\newcommand{\Ainf}{\ensuremath{\mathrm{A}_\infty}}
 
 \addtolength{\hoffset}{-0.0in} \addtolength{\textwidth}{0in}
 \addtolength{\voffset}{-0.0in} \addtolength{\textheight}{0.0in}
