--- a/sec/introduction.tex
+++ b/sec/introduction.tex
@@ -4,15 +4,24 @@
 \label{s:introduction}
 
 The purpose of this article is to study cellular diagonals on the permutahedra, which are cellular maps homotopic to the usual thin diagonal $\triangle : P \to P \times P, x \mapsto (x,x)$.
-Such diagonals, and particularly coherent families that we call \emph{operadic} diagonals (see [DEF]), are of interest in algebraic geometry and topology: via the theory of Fulton--Sturmfels \cite{fultonIntersectionTheoryToric1997a}, they give explicit formulas for the cup product on Losev--Manin toric varieties [REF]; they define universal tensor products of homotopy operads, and in particular universal tensor products of homotopy associative permutads (shuffle algebras) \cite{LA21}; they allow for the definition of permutahedral sets (twisted tensor products?) [Saneblidze]; and they are needed to pursue the work of Baues in order to define explicit combinatorial models for iterated loop spaces [REF]. 
-\Guillaume{Th\'eorie des matro\"ides?}
-Moreover, using the canonical projections to the multiplihedra and the associahedra, they define universal tensor product of $A_\infty$-algebras and $A_\infty$-morphisms [LAMAz]
+Such diagonals, and in particular coherent families that we call \emph{operadic} diagonals (see [DEF]), are of interest in algebraic geometry and topology: via the theory of Fulton--Sturmfels \cite{fultonIntersectionTheoryToric1997a}, they give explicit formulas for the cup product on Losev--Manin toric varieties \cite{losevNewModuliSpaces2000}; they define universal tensor products of homotopy operads, and in particular universal tensor products of homotopy associative permutads (shuffle algebras) \cite{LA21}; they allow for the definition of a coproduct on permutahedral sets, which are used to models of two-fold loop spaces \cite{SaneblidzeUmble04}; and their study is moreover needed to pursue the work of Baues aiming at defining explicit combinatorial models for higher iterated loop spaces \cite{bauesGeometryLoopSpaces1980}. 
+Moreover, using the canonical projections to the multiplihedra and the associahedra, they define universal tensor product of $\Ainf$-algebras and $\Ainf$-morphisms \cite{MazuirLA22}.
+\Guillaume{lien avec les matroides?}
 
-The first occurence of a cellular approximation in the literature is in the work of S. Sanebdlize and R. Umble. 
-They use it for permutahedral sets...
+The first cellular diagonal for the permutahedra was defined at the level of chains by S. Saneblidze and R. Umble in \cite{SaneblidzeUmble04}, we will call it the \emph{SU diagonal}. 
+Cellular diagonals for the associahedra and the multiplihedra were also defined there, via projection. 
+The first topological map for the permutahedra was given in \cite{LA21} -we will call it the \emph{LA diagonal}, where a general theory of cellular diagonals of polytopes was developed. 
+The LA diagonal, however, is distinct from the SU diagonal at the cellular level \cite[Remark 3.19]{LA21}. 
+
+computer program for the SU diagonal \cite{vejdemo-johanssonEnumeratingSaneblidzeUmbleDiagonal2007}; we give a much more effective computer program (however, without the signs)
+
+corollary: le dernier article de SU!
+corollary: IJ-description of SU diagonal
+corollary: left and right shifts for LA, decomposition of the cube associated to LA diagonal
 
 
-%\subsection{Conventions}
+
+\subsection{Conventions}
 %We use the notations of \cite{LodayVallette12} for operads.
 
 \Guillaume{Please make a new line for each sentence as to facilitate comparison between versions in GitHub}
