--- a/Poissons.tex
+++ b/Poissons.tex
@@ -35,8 +35,8 @@
 \urladdr{\url{http://www.lix.polytechnique.fr/~pilaud/}}
 
 \author[K. Stoeckl]{Kurt Stoeckl}
-\address{}
-\email{}
+\address{School of Mathematics and Statistics, University of Melbourne, Victoria, Australia}
+\email{kstoeckl@student.unimelb.edu.au}
 
 \date{\today}
 
